initial testing of using milstd2525 javascript library to display all 2525c icons

--- a/Sources/SwiftMilSymbol/JavaScript/package.json
+++ b/Sources/SwiftMilSymbol/JavaScript/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "mil-std-2525": "^0.2.8",
     "milsymbol": "^2.2.0"
   },
   "devDependencies": {
